# libcredhelper

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
src/: libcred_macos.cpp
